// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RichText > render correctly 1`] = `
<rich-text
  nodes={[]}
/>
`;

exports[`RichText render correctly 1`] = `
<rich-text
  nodes={Array []}
/>
`;
